--- a/assessment.tex
+++ b/assessment.tex
@@ -118,7 +118,7 @@
 
 \section*{Marking scheme}
   The following marking scheme will be used to mark your submission out of 100\%, which will then be scaled to 50\%.
-  The examiner's overall impression of the assignment may influence marks in each individual component.
+  The examiner's overall impression of your submission may influence marks in each individual component.
   It is important that your submission provides direct evidence of each of the items listed in each category.
   For instance, your commit history should demonstrate and provide evidence that you had a pragmatic attitude to completing the assessment.
   Likewise, your submission should have references in it to demonstrate that you considered the literature and the work of others.
@@ -137,9 +137,6 @@
     \end{tabular}
   \end{center}
   
-
-
-
   \bibliographystyle{plain}
   \bibliography{bibliography}
 
