--- a/assessment.tex
+++ b/assessment.tex
@@ -90,7 +90,6 @@
 
 \begin{document}
   
-  
   \maketitle
 
   These are the instructions for the Tasks assessment for Fundamentals of Data Analysis in 2020.
@@ -99,45 +98,44 @@
   As always, you must also follow the code of student conduct and the policy on plagiarism~\cite{gmitqaf}.
 
   \section*{Instructions}
-  Four tasks will be listed here at different times during the semester.
-  You should complete all tasks in a single jupyter notebook.
-  This, along with relevant files like a README, should be in a single git repository synced with a hosting provider like GitHub~\cite{github}.
-  That URL should then be submitted using the link on the Moodle page.
+    Four tasks will be listed here at different times during the semester.
+    You should complete all tasks in a single jupyter notebook.
+    This, along with relevant files like a README, should be in a single git repository synced with a hosting provider like GitHub~\cite{github}.
+    That URL should then be submitted using the link on the Moodle page.
 
-  \begin{enumerate}
-    \item
-      \textbf{October 5\textsuperscript{th}, 2020:}
-      Write a Python function called \mintinline{python}{counts} that takes a list as input and returns a dictionary of unique items in the list as keys and the number of times each item appears as values.
-      So, the input \mintinline{python}{['A', 'A', 'B', 'C', 'A']} should have output \mintinline{python}{{'A': 3, 'B': 1, 'C': 1}}.
-      Your code should not depend on any module from the standard library or otherwise.
-      You should research the task first and include a description with references of your algorithm in the notebook.
-  \end{enumerate}
+    \begin{enumerate}
+      \item
+        \textbf{October 5\textsuperscript{th}, 2020:}
+        Write a Python function called \mintinline{python}{counts} that takes a list as input and returns a dictionary of unique items in the list as keys and the number of times each item appears as values.
+        So, the input \mintinline{python}{['A', 'A', 'B', 'C', 'A']} should have output \mintinline{python}{{'A': 3, 'B': 1, 'C': 1}}.
+        Your code should not depend on any module from the standard library or otherwise.
+        You should research the task first and include a description with references of your algorithm in the notebook.
+    \end{enumerate}
 
+  \newpage
 
-\newpage
+  \section*{Marking scheme}
+    The following marking scheme will be used to mark your submission out of 100\%, which will then be scaled to 50\%.
+    The examiner's overall impression of your submission may influence marks in each individual component.
+    It is important that your submission provides direct evidence of each of the items listed in each category.
+    For instance, your commit history should demonstrate and provide evidence that you had a pragmatic attitude to completing the assessment.
+    Likewise, your submission should have references in it to demonstrate that you considered the literature and the work of others.
 
-\section*{Marking scheme}
-  The following marking scheme will be used to mark your submission out of 100\%, which will then be scaled to 50\%.
-  The examiner's overall impression of your submission may influence marks in each individual component.
-  It is important that your submission provides direct evidence of each of the items listed in each category.
-  For instance, your commit history should demonstrate and provide evidence that you had a pragmatic attitude to completing the assessment.
-  Likewise, your submission should have references in it to demonstrate that you considered the literature and the work of others.
-
-  \begin{center}
-    \begin{tabular}{llp{8.4cm}}
-      \toprule
-      25\% & \textbf{Research} & Evidence of research performed on topic; submission based on referenced literature, particularly academic literature; evidence of understanding of the documentation for any software or libraries used. \\
-      \midrule
-      25\% & \textbf{Development} & Environment can be set up as described; code works without tweaking and as described; code is efficient, clean, and clear; evidence of consideration of standards and conventions appropriate to code of this kind. \\
-      \midrule
-      25\% & \textbf{Consistency} & Evidence of planning and project management; pragmatic attitude to work as evidenced by well-considered commit history; commits are of a reasonable size; consideration of how commit history will be perceived by others. \\
-      \midrule
-      25\% & \textbf{Documentation} & Clear documentation of how to create an environment in which any code will run, how to prepare the code for running, how to run the code including setting any options or flags, and what to expect upon running the code. Concise descriptions of code in comments and README. \\
-      \bottomrule
-    \end{tabular}
-  \end{center}
+    \begin{center}
+      \begin{tabular}{llp{8.4cm}}
+        \toprule
+        25\% & \textbf{Research} & Evidence of research performed on topic; submission based on referenced literature, particularly academic literature; evidence of understanding of the documentation for any software or libraries used. \\
+        \midrule
+        25\% & \textbf{Development} & Environment can be set up as described; code works without tweaking and as described; code is efficient, clean, and clear; evidence of consideration of standards and conventions appropriate to code of this kind. \\
+        \midrule
+        25\% & \textbf{Consistency} & Evidence of planning and project management; pragmatic attitude to work as evidenced by well-considered commit history; commits are of a reasonable size; consideration of how commit history will be perceived by others. \\
+        \midrule
+        25\% & \textbf{Documentation} & Clear documentation of how to create an environment in which any code will run, how to prepare the code for running, how to run the code including setting any options or flags, and what to expect upon running the code. Concise descriptions of code in comments and README. \\
+        \bottomrule
+      \end{tabular}
+    \end{center}
   
-  \bibliographystyle{plain}
+  \bibliographystyle{ieeetrans}
   \bibliography{bibliography}
 
 \end{document}
