--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,29 +1,30 @@
-@misc{gmitqaf,
-  author = "GMIT",
-  title = "Quality Assurance Framework",
-  howpublished = "\\ \url{https://www.gmit.ie/general/quality-assurance-framework}"
-}
-
-@misc{pythonwebsite,
-    author = "Python Software Foundation ",
-    title = "Welcome to Python.org",
-    howpublished = "\\ \url{https://www.python.org/}"
-}
-
-@misc{git,
-  author = "Software Freedom Conservancy",
-  title = "Git",
-  howpublished = "\\ \url{https://git-scm.com/}"
-}
-
-@misc{github,
-  author = "GitHub, Inc.",
-  title = "GitHub",
-  howpublished = "\\ \url{https://github.com/}"
-}
-
 @misc{usinggit,
   author = "Ian McLoughlin",
   title = "Using git for assessments",
   howpublished = "\\ \url{https://github.com/ianmcloughlin/using-git-for-assessments/}"
 }
+
+@misc{gmitqaf,
+  author = "{GMIT}",
+  title = "{Quality Assurance Framework}",
+  howpublished = "\\ \url{https://www.gmit.ie/general/quality-assurance-framework}"
+}
+
+@misc{pythonwebsite,
+    author = "{Python Software Foundation}",
+    title = "{Welcome to Python.org}",
+    howpublished = "\\ \url{https://www.python.org/}"
+}
+
+@misc{git,
+  author = "{Software Freedom Conservancy}",
+  title = "{Git}",
+  howpublished = "\\ \url{https://git-scm.com/}"
+}
+
+@misc{github,
+  author = "{G}it{H}ub {I}nc.",
+  title = "{G}it{H}ub",
+  howpublished = "\\ \url{https://github.com/}"
+}
+
