--- a/assessment.tex
+++ b/assessment.tex
@@ -108,7 +108,7 @@
         \textbf{October 5\textsuperscript{th}, 2020:}
         Write a Python function called \mintinline{python}{counts} that takes a list as input and returns a dictionary of unique items in the list as keys and the number of times each item appears as values.
         So, the input \mintinline{python}{['A', 'A', 'B', 'C', 'A']} should have output \mintinline{python}{{'A': 3, 'B': 1, 'C': 1}}.
-        Your code should not depend on any module from the standard library or otherwise.
+        Your code should not depend on any module from the standard library\footnote{By the standard library, we mean the modules and packages that come as standard with Python. Anything built-in that can be used without an \mintinline{python}{import} statement can be used.} or otherwise.
         You should research the task first and include a description with references of your algorithm in the notebook.
     \end{enumerate}
 
