--- a/assessment.tex
+++ b/assessment.tex
@@ -119,7 +119,16 @@
 {2:19,3:50,4:82,5:112,6:135,7:174,8:133,9:114,10:75,11:70,12:36}
         \end{minted}
         You can use any module from the Python standard library you wish and you should include a description with references of your algorithm in the notebook.
-    \end{enumerate}
+        \newpage
+      \item \textbf{November 16\textsuperscript{th}, 2020:}
+        The \mintinline{python}{numpy.random.binomial} function can be used to simulate flipping a coin with a $50/50$ chance of heads or tails.
+        Interestingly, if a coin is flipped many times then the number of heads is well approximated by a bell-shaped curve.
+        For instance, if we flip a coin 100 times in a row the chance of getting 50 heads is relatively high, the chances of getting 0 or 100 heads is relatively low, and the chances of getting any other number of heads decreases as you move away from 50 in either direction towards 0 or 100.
+        Write some python code that simulates flipping a coin 100 times.
+        Then run this code 1,000 times, keeping track of the number of heads in each of the 1,000 simulations.
+        Select an appropriate plot to depict the resulting list of 1,000 numbers, showing that it roughly follows a bell-shaped curve.
+        You should explain your work in a Markdown cell above the code.
+      \end{enumerate}
 
   \newpage
 
