--- a/assessment.tex
+++ b/assessment.tex
@@ -128,7 +128,14 @@
         Then run this code 1,000 times, keeping track of the number of heads in each of the 1,000 simulations.
         Select an appropriate plot to depict the resulting list of 1,000 numbers, showing that it roughly follows a bell-shaped curve.
         You should explain your work in a Markdown cell above the code.
+      \item \textbf{November 30\textsuperscript{th}, 2020:}
+        Simpson's paradox is a well-known statistical paradox where a trend evident in a number of groups reverses when the groups are combined into one big data set.
+        Use numpy to create four data sets, each with an \mintinline{python}{x} array and a corresponding \mintinline{python}{y} array, to demonstrate Simpson's paradox.
+        You might create your \mintinline{python}{x} arrays using \mintinline{python}{numpy.linspace} and create the \mintinline{python}{y} array for each \mintinline{python}{x} using notation like \mintinline{python}{y = a * x + b} where you choose the \mintinline{python}{a} and \mintinline{python}{b} for each \mintinline{python}{x}, \mintinline{python}{y} pair to demonstrate the paradox.
+        You might see the Wikipedia page for Simpson's paradox for inspiration.
+
       \end{enumerate}
+
 
   \newpage
 
